docs/parser.output
Terminals unused in grammar

    TOK_SPECIFIER_PR
    TOK_NULL_PR
    TOK_FUNCT_KEY
    TOK_RETURN_KEY
    TOK_UNTIL_KEY
    TOK_WHILE_KEY
    TOK_FOR_KEY
    TOK_DO_KEY
    TOK_GOTO_KEY
    TOK_VAR_KEY
    TOK_PTR_KEY
    TOK_INC_OP
    TOK_DEC_OP
    TOK_NOT_OP
    TOK_QSTN_OP
    TOK_BITXOR_OP
    TOK_BITOR_OP
    TOK_BITAND_OP
    TOK_COLON_OP
    TOK_COMMA_SBL
    TOK_FATCOMMA_SBL
    TOK_LBRACKET_SBL
    TOK_RBRACKET_SBL
    TOK_LABEL_IDENTIFIER
    UNIDENTIFIED_TOKEN
    TOK_PRINT_MACRO


State 0 conflicts: 10 shift/reduce
State 7 conflicts: 1 shift/reduce
State 12 conflicts: 10 shift/reduce, 1 reduce/reduce
State 25 conflicts: 10 shift/reduce
State 36 conflicts: 10 shift/reduce, 1 reduce/reduce
State 37 conflicts: 1 shift/reduce
State 54 conflicts: 11 shift/reduce
State 72 conflicts: 1 shift/reduce
State 81 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: statement statements
    2                 | statement

    3 statement: assignment
    4          | macro
    5          | block
    6          | ifelse

    7 statements: statement
    8           | statements statement

    9 block: %empty
   10      | TOK_LARROW_SBL TOK_RARROW_SBL

   11 $@1: %empty

   12 block: TOK_LARROW_SBL $@1 statements TOK_RARROW_SBL

   13 ifelse: if
   14       | if else

   15 if: TOK_IF_KEY TOK_LPAR_SBL condition TOK_RPAR_SBL block

   16 else: TOK_ELSE_KEY block

   17 condition: exp
   18          | condition TOK_AND_OP exp
   19          | condition TOK_OR_OP exp
   20          | condition TOK_TEQ_OP exp
   21          | condition TOK_NEQ_OP exp
   22          | condition TOK_LEQ_OP exp
   23          | condition TOK_GEQ_OP exp
   24          | condition TOK_LESS_OP exp
   25          | condition TOK_GRTR_OP exp
   26          | TOK_LPAR_SBL condition TOK_RPAR_SBL

   27 macro: TOK_STDOUT_STREAM TOK_PUT_OP exp TOK_DOT_SBL
   28      | TOK_STDIN_STREAM TOK_PUT_OP TOK_IDENTIFIER TOK_DOT_SBL

   29 assignment: TOK_INTEGER_PR TOK_IDENTIFIER TOK_EQ_OP exp TOK_DOT_SBL
   30           | TOK_FLOAT_PR TOK_IDENTIFIER TOK_EQ_OP exp TOK_DOT_SBL
   31           | TOK_BOOL_PR TOK_IDENTIFIER TOK_EQ_OP exp TOK_DOT_SBL
   32           | TOK_CHAR_PR TOK_IDENTIFIER TOK_EQ_OP exp TOK_DOT_SBL
   33           | TOK_STRING_PR TOK_IDENTIFIER TOK_EQ_OP exp TOK_DOT_SBL
   34           | TOK_IDENTIFIER TOK_EQ_OP exp TOK_DOT_SBL
   35           | TOK_IDENTIFIER TOK_SUMEQ_OP exp TOK_DOT_SBL
   36           | TOK_IDENTIFIER TOK_MINEQ_OP exp TOK_DOT_SBL
   37           | TOK_IDENTIFIER TOK_MULTEQ_OP exp TOK_DOT_SBL
   38           | TOK_IDENTIFIER TOK_DIVEQ_OP exp TOK_DOT_SBL
   39           | TOK_IDENTIFIER TOK_MODEQ_OP exp TOK_DOT_SBL

   40 exp: term
   41    | exp TOK_SUM_OP term
   42    | exp TOK_MINUS_OP term
   43    | exp TOK_MULT_OP term
   44    | exp TOK_DIV_OP term
   45    | exp TOK_MOD_OP term
   46    | exp TOK_EXP_OP term
   47    | TOK_LPAR_SBL exp TOK_RPAR_SBL

   48 term: TOK_INTEGER_LIT
   49     | TOK_FLOAT_LIT
   50     | TOK_STRING_LIT
   51     | TOK_CHAR_LIT
   52     | TOK_BOOL_LIT
   53     | TOK_IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOK_INTEGER_LIT <integer> (258) 48
    TOK_FLOAT_LIT <floating_point> (259) 49
    TOK_CHAR_LIT <character> (260) 51
    TOK_STRING_LIT <string> (261) 50
    TOK_BOOL_LIT <boolean> (262) 52
    TOK_SPECIFIER_PR (263)
    TOK_CHAR_PR (264) 32
    TOK_STRING_PR (265) 33
    TOK_INTEGER_PR (266) 29
    TOK_FLOAT_PR (267) 30
    TOK_BOOL_PR (268) 31
    TOK_NULL_PR (269)
    TOK_FUNCT_KEY (270)
    TOK_RETURN_KEY (271)
    TOK_UNTIL_KEY (272)
    TOK_WHILE_KEY (273)
    TOK_FOR_KEY (274)
    TOK_DO_KEY (275)
    TOK_GOTO_KEY (276)
    TOK_IF_KEY (277) 15
    TOK_ELSE_KEY (278) 16
    TOK_VAR_KEY (279)
    TOK_PTR_KEY (280)
    TOK_SUMEQ_OP (281) 35
    TOK_MINEQ_OP (282) 36
    TOK_MODEQ_OP (283) 39
    TOK_MULTEQ_OP (284) 37
    TOK_DIVEQ_OP (285) 38
    TOK_INC_OP (286)
    TOK_DEC_OP (287)
    TOK_SUM_OP (288) 41
    TOK_MINUS_OP (289) 42
    TOK_NOT_OP (290)
    TOK_QSTN_OP (291)
    TOK_MULT_OP (292) 43
    TOK_DIV_OP (293) 44
    TOK_MOD_OP (294) 45
    TOK_EXP_OP (295) 46
    TOK_OR_OP (296) 19
    TOK_AND_OP (297) 18
    TOK_BITXOR_OP (298)
    TOK_BITOR_OP (299)
    TOK_BITAND_OP (300)
    TOK_TEQ_OP (301) 20
    TOK_LEQ_OP (302) 22
    TOK_GEQ_OP (303) 23
    TOK_NEQ_OP (304) 21
    TOK_EQ_OP (305) 29 30 31 32 33 34
    TOK_PUT_OP (306) 27 28
    TOK_COLON_OP (307)
    TOK_LESS_OP (308) 24
    TOK_GRTR_OP (309) 25
    TOK_DOT_SBL (310) 27 28 29 30 31 32 33 34 35 36 37 38 39
    TOK_LPAR_SBL (311) 15 26 47
    TOK_RPAR_SBL (312) 15 26 47
    TOK_COMMA_SBL (313)
    TOK_LARROW_SBL (314) 10 12
    TOK_RARROW_SBL (315) 10 12
    TOK_FATCOMMA_SBL (316)
    TOK_LBRACKET_SBL (317)
    TOK_RBRACKET_SBL (318)
    TOK_IDENTIFIER <identifier> (319) 28 29 30 31 32 33 34 35 36 37 38 39 53
    TOK_LABEL_IDENTIFIER <identifier> (320)
    UNIDENTIFIED_TOKEN (321)
    TOK_STDOUT_STREAM (322) 27
    TOK_STDIN_STREAM (323) 28
    TOK_PRINT_MACRO (324)


Nonterminals, with rules where they appear

    $accept (70)
        on left: 0
    translation_unit (71)
        on left: 1 2
        on right: 0
    statement (72)
        on left: 3 4 5 6
        on right: 1 2 7 8
    statements (73)
        on left: 7 8
        on right: 1 8 12
    block (74)
        on left: 9 10 12
        on right: 5 15 16
    $@1 (75)
        on left: 11
        on right: 12
    ifelse (76)
        on left: 13 14
        on right: 6
    if (77)
        on left: 15
        on right: 13 14
    else (78)
        on left: 16
        on right: 14
    condition (79)
        on left: 17 18 19 20 21 22 23 24 25 26
        on right: 15 18 19 20 21 22 23 24 25 26
    macro (80)
        on left: 27 28
        on right: 4
    assignment (81)
        on left: 29 30 31 32 33 34 35 36 37 38 39
        on right: 3
    exp <term> (82)
        on left: 40 41 42 43 44 45 46 47
        on right: 17 18 19 20 21 22 23 24 25 27 29 30 31 32 33 34 35 36 37 38 39 41 42 43 44 45 46 47
    term <term> (83)
        on left: 48 49 50 51 52 53
        on right: 40 41 42 43 44 45 46


State 0

    0 $accept: • translation_unit $end

    TOK_CHAR_PR        shift, and go to state 1
    TOK_STRING_PR      shift, and go to state 2
    TOK_INTEGER_PR     shift, and go to state 3
    TOK_FLOAT_PR       shift, and go to state 4
    TOK_BOOL_PR        shift, and go to state 5
    TOK_IF_KEY         shift, and go to state 6
    TOK_LARROW_SBL     shift, and go to state 7
    TOK_IDENTIFIER     shift, and go to state 8
    TOK_STDOUT_STREAM  shift, and go to state 9
    TOK_STDIN_STREAM   shift, and go to state 10

    TOK_CHAR_PR        [reduce using rule 9 (block)]
    TOK_STRING_PR      [reduce using rule 9 (block)]
    TOK_INTEGER_PR     [reduce using rule 9 (block)]
    TOK_FLOAT_PR       [reduce using rule 9 (block)]
    TOK_BOOL_PR        [reduce using rule 9 (block)]
    TOK_IF_KEY         [reduce using rule 9 (block)]
    TOK_LARROW_SBL     [reduce using rule 9 (block)]
    TOK_IDENTIFIER     [reduce using rule 9 (block)]
    TOK_STDOUT_STREAM  [reduce using rule 9 (block)]
    TOK_STDIN_STREAM   [reduce using rule 9 (block)]
    $default           reduce using rule 9 (block)

    translation_unit  go to state 11
    statement         go to state 12
    block             go to state 13
    ifelse            go to state 14
    if                go to state 15
    macro             go to state 16
    assignment        go to state 17


State 1

   32 assignment: TOK_CHAR_PR • TOK_IDENTIFIER TOK_EQ_OP exp TOK_DOT_SBL

    TOK_IDENTIFIER  shift, and go to state 18


State 2

   33 assignment: TOK_STRING_PR • TOK_IDENTIFIER TOK_EQ_OP exp TOK_DOT_SBL

    TOK_IDENTIFIER  shift, and go to state 19


State 3

   29 assignment: TOK_INTEGER_PR • TOK_IDENTIFIER TOK_EQ_OP exp TOK_DOT_SBL

    TOK_IDENTIFIER  shift, and go to state 20


State 4

   30 assignment: TOK_FLOAT_PR • TOK_IDENTIFIER TOK_EQ_OP exp TOK_DOT_SBL

    TOK_IDENTIFIER  shift, and go to state 21


State 5

   31 assignment: TOK_BOOL_PR • TOK_IDENTIFIER TOK_EQ_OP exp TOK_DOT_SBL

    TOK_IDENTIFIER  shift, and go to state 22


State 6

   15 if: TOK_IF_KEY • TOK_LPAR_SBL condition TOK_RPAR_SBL block

    TOK_LPAR_SBL  shift, and go to state 23


State 7

   10 block: TOK_LARROW_SBL • TOK_RARROW_SBL
   12      | TOK_LARROW_SBL • $@1 statements TOK_RARROW_SBL

    TOK_RARROW_SBL  shift, and go to state 24

    TOK_RARROW_SBL  [reduce using rule 11 ($@1)]
    $default        reduce using rule 11 ($@1)

    $@1  go to state 25


State 8

   34 assignment: TOK_IDENTIFIER • TOK_EQ_OP exp TOK_DOT_SBL
   35           | TOK_IDENTIFIER • TOK_SUMEQ_OP exp TOK_DOT_SBL
   36           | TOK_IDENTIFIER • TOK_MINEQ_OP exp TOK_DOT_SBL
   37           | TOK_IDENTIFIER • TOK_MULTEQ_OP exp TOK_DOT_SBL
   38           | TOK_IDENTIFIER • TOK_DIVEQ_OP exp TOK_DOT_SBL
   39           | TOK_IDENTIFIER • TOK_MODEQ_OP exp TOK_DOT_SBL

    TOK_SUMEQ_OP   shift, and go to state 26
    TOK_MINEQ_OP   shift, and go to state 27
    TOK_MODEQ_OP   shift, and go to state 28
    TOK_MULTEQ_OP  shift, and go to state 29
    TOK_DIVEQ_OP   shift, and go to state 30
    TOK_EQ_OP      shift, and go to state 31


State 9

   27 macro: TOK_STDOUT_STREAM • TOK_PUT_OP exp TOK_DOT_SBL

    TOK_PUT_OP  shift, and go to state 32


State 10

   28 macro: TOK_STDIN_STREAM • TOK_PUT_OP TOK_IDENTIFIER TOK_DOT_SBL

    TOK_PUT_OP  shift, and go to state 33


State 11

    0 $accept: translation_unit • $end

    $end  shift, and go to state 34


State 12

    1 translation_unit: statement • statements
    2                 | statement •  [$end]

    TOK_CHAR_PR        shift, and go to state 1
    TOK_STRING_PR      shift, and go to state 2
    TOK_INTEGER_PR     shift, and go to state 3
    TOK_FLOAT_PR       shift, and go to state 4
    TOK_BOOL_PR        shift, and go to state 5
    TOK_IF_KEY         shift, and go to state 6
    TOK_LARROW_SBL     shift, and go to state 7
    TOK_IDENTIFIER     shift, and go to state 8
    TOK_STDOUT_STREAM  shift, and go to state 9
    TOK_STDIN_STREAM   shift, and go to state 10

    $end               reduce using rule 2 (translation_unit)
    $end               [reduce using rule 9 (block)]
    TOK_CHAR_PR        [reduce using rule 9 (block)]
    TOK_STRING_PR      [reduce using rule 9 (block)]
    TOK_INTEGER_PR     [reduce using rule 9 (block)]
    TOK_FLOAT_PR       [reduce using rule 9 (block)]
    TOK_BOOL_PR        [reduce using rule 9 (block)]
    TOK_IF_KEY         [reduce using rule 9 (block)]
    TOK_LARROW_SBL     [reduce using rule 9 (block)]
    TOK_IDENTIFIER     [reduce using rule 9 (block)]
    TOK_STDOUT_STREAM  [reduce using rule 9 (block)]
    TOK_STDIN_STREAM   [reduce using rule 9 (block)]
    $default           reduce using rule 2 (translation_unit)

    statement   go to state 35
    statements  go to state 36
    block       go to state 13
    ifelse      go to state 14
    if          go to state 15
    macro       go to state 16
    assignment  go to state 17


State 13

    5 statement: block •

    $default  reduce using rule 5 (statement)


State 14

    6 statement: ifelse •

    $default  reduce using rule 6 (statement)


State 15

   13 ifelse: if •  [$end, TOK_CHAR_PR, TOK_STRING_PR, TOK_INTEGER_PR, TOK_FLOAT_PR, TOK_BOOL_PR, TOK_IF_KEY, TOK_LARROW_SBL, TOK_RARROW_SBL, TOK_IDENTIFIER, TOK_STDOUT_STREAM, TOK_STDIN_STREAM]
   14       | if • else

    TOK_ELSE_KEY  shift, and go to state 37

    $default  reduce using rule 13 (ifelse)

    else  go to state 38


State 16

    4 statement: macro •

    $default  reduce using rule 4 (statement)


State 17

    3 statement: assignment •

    $default  reduce using rule 3 (statement)


State 18

   32 assignment: TOK_CHAR_PR TOK_IDENTIFIER • TOK_EQ_OP exp TOK_DOT_SBL

    TOK_EQ_OP  shift, and go to state 39


State 19

   33 assignment: TOK_STRING_PR TOK_IDENTIFIER • TOK_EQ_OP exp TOK_DOT_SBL

    TOK_EQ_OP  shift, and go to state 40


State 20

   29 assignment: TOK_INTEGER_PR TOK_IDENTIFIER • TOK_EQ_OP exp TOK_DOT_SBL

    TOK_EQ_OP  shift, and go to state 41


State 21

   30 assignment: TOK_FLOAT_PR TOK_IDENTIFIER • TOK_EQ_OP exp TOK_DOT_SBL

    TOK_EQ_OP  shift, and go to state 42


State 22

   31 assignment: TOK_BOOL_PR TOK_IDENTIFIER • TOK_EQ_OP exp TOK_DOT_SBL

    TOK_EQ_OP  shift, and go to state 43


State 23

   15 if: TOK_IF_KEY TOK_LPAR_SBL • condition TOK_RPAR_SBL block

    TOK_INTEGER_LIT  shift, and go to state 44
    TOK_FLOAT_LIT    shift, and go to state 45
    TOK_CHAR_LIT     shift, and go to state 46
    TOK_STRING_LIT   shift, and go to state 47
    TOK_BOOL_LIT     shift, and go to state 48
    TOK_LPAR_SBL     shift, and go to state 49
    TOK_IDENTIFIER   shift, and go to state 50

    condition  go to state 51
    exp        go to state 52
    term       go to state 53


State 24

   10 block: TOK_LARROW_SBL TOK_RARROW_SBL •

    $default  reduce using rule 10 (block)


State 25

   12 block: TOK_LARROW_SBL $@1 • statements TOK_RARROW_SBL

    TOK_CHAR_PR        shift, and go to state 1
    TOK_STRING_PR      shift, and go to state 2
    TOK_INTEGER_PR     shift, and go to state 3
    TOK_FLOAT_PR       shift, and go to state 4
    TOK_BOOL_PR        shift, and go to state 5
    TOK_IF_KEY         shift, and go to state 6
    TOK_LARROW_SBL     shift, and go to state 7
    TOK_IDENTIFIER     shift, and go to state 8
    TOK_STDOUT_STREAM  shift, and go to state 9
    TOK_STDIN_STREAM   shift, and go to state 10

    TOK_CHAR_PR        [reduce using rule 9 (block)]
    TOK_STRING_PR      [reduce using rule 9 (block)]
    TOK_INTEGER_PR     [reduce using rule 9 (block)]
    TOK_FLOAT_PR       [reduce using rule 9 (block)]
    TOK_BOOL_PR        [reduce using rule 9 (block)]
    TOK_IF_KEY         [reduce using rule 9 (block)]
    TOK_LARROW_SBL     [reduce using rule 9 (block)]
    TOK_IDENTIFIER     [reduce using rule 9 (block)]
    TOK_STDOUT_STREAM  [reduce using rule 9 (block)]
    TOK_STDIN_STREAM   [reduce using rule 9 (block)]
    $default           reduce using rule 9 (block)

    statement   go to state 35
    statements  go to state 54
    block       go to state 13
    ifelse      go to state 14
    if          go to state 15
    macro       go to state 16
    assignment  go to state 17


State 26

   35 assignment: TOK_IDENTIFIER TOK_SUMEQ_OP • exp TOK_DOT_SBL

    TOK_INTEGER_LIT  shift, and go to state 44
    TOK_FLOAT_LIT    shift, and go to state 45
    TOK_CHAR_LIT     shift, and go to state 46
    TOK_STRING_LIT   shift, and go to state 47
    TOK_BOOL_LIT     shift, and go to state 48
    TOK_LPAR_SBL     shift, and go to state 55
    TOK_IDENTIFIER   shift, and go to state 50

    exp   go to state 56
    term  go to state 53


State 27

   36 assignment: TOK_IDENTIFIER TOK_MINEQ_OP • exp TOK_DOT_SBL

    TOK_INTEGER_LIT  shift, and go to state 44
    TOK_FLOAT_LIT    shift, and go to state 45
    TOK_CHAR_LIT     shift, and go to state 46
    TOK_STRING_LIT   shift, and go to state 47
    TOK_BOOL_LIT     shift, and go to state 48
    TOK_LPAR_SBL     shift, and go to state 55
    TOK_IDENTIFIER   shift, and go to state 50

    exp   go to state 57
    term  go to state 53


State 28

   39 assignment: TOK_IDENTIFIER TOK_MODEQ_OP • exp TOK_DOT_SBL

    TOK_INTEGER_LIT  shift, and go to state 44
    TOK_FLOAT_LIT    shift, and go to state 45
    TOK_CHAR_LIT     shift, and go to state 46
    TOK_STRING_LIT   shift, and go to state 47
    TOK_BOOL_LIT     shift, and go to state 48
    TOK_LPAR_SBL     shift, and go to state 55
    TOK_IDENTIFIER   shift, and go to state 50

    exp   go to state 58
    term  go to state 53


State 29

   37 assignment: TOK_IDENTIFIER TOK_MULTEQ_OP • exp TOK_DOT_SBL

    TOK_INTEGER_LIT  shift, and go to state 44
    TOK_FLOAT_LIT    shift, and go to state 45
    TOK_CHAR_LIT     shift, and go to state 46
    TOK_STRING_LIT   shift, and go to state 47
    TOK_BOOL_LIT     shift, and go to state 48
    TOK_LPAR_SBL     shift, and go to state 55
    TOK_IDENTIFIER   shift, and go to state 50

    exp   go to state 59
    term  go to state 53


State 30

   38 assignment: TOK_IDENTIFIER TOK_DIVEQ_OP • exp TOK_DOT_SBL

    TOK_INTEGER_LIT  shift, and go to state 44
    TOK_FLOAT_LIT    shift, and go to state 45
    TOK_CHAR_LIT     shift, and go to state 46
    TOK_STRING_LIT   shift, and go to state 47
    TOK_BOOL_LIT     shift, and go to state 48
    TOK_LPAR_SBL     shift, and go to state 55
    TOK_IDENTIFIER   shift, and go to state 50

    exp   go to state 60
    term  go to state 53


State 31

   34 assignment: TOK_IDENTIFIER TOK_EQ_OP • exp TOK_DOT_SBL

    TOK_INTEGER_LIT  shift, and go to state 44
    TOK_FLOAT_LIT    shift, and go to state 45
    TOK_CHAR_LIT     shift, and go to state 46
    TOK_STRING_LIT   shift, and go to state 47
    TOK_BOOL_LIT     shift, and go to state 48
    TOK_LPAR_SBL     shift, and go to state 55
    TOK_IDENTIFIER   shift, and go to state 50

    exp   go to state 61
    term  go to state 53


State 32

   27 macro: TOK_STDOUT_STREAM TOK_PUT_OP • exp TOK_DOT_SBL

    TOK_INTEGER_LIT  shift, and go to state 44
    TOK_FLOAT_LIT    shift, and go to state 45
    TOK_CHAR_LIT     shift, and go to state 46
    TOK_STRING_LIT   shift, and go to state 47
    TOK_BOOL_LIT     shift, and go to state 48
    TOK_LPAR_SBL     shift, and go to state 55
    TOK_IDENTIFIER   shift, and go to state 50

    exp   go to state 62
    term  go to state 53


State 33

   28 macro: TOK_STDIN_STREAM TOK_PUT_OP • TOK_IDENTIFIER TOK_DOT_SBL

    TOK_IDENTIFIER  shift, and go to state 63


State 34

    0 $accept: translation_unit $end •

    $default  accept


State 35

    7 statements: statement •

    $default  reduce using rule 7 (statements)


State 36

    1 translation_unit: statement statements •  [$end]
    8 statements: statements • statement

    TOK_CHAR_PR        shift, and go to state 1
    TOK_STRING_PR      shift, and go to state 2
    TOK_INTEGER_PR     shift, and go to state 3
    TOK_FLOAT_PR       shift, and go to state 4
    TOK_BOOL_PR        shift, and go to state 5
    TOK_IF_KEY         shift, and go to state 6
    TOK_LARROW_SBL     shift, and go to state 7
    TOK_IDENTIFIER     shift, and go to state 8
    TOK_STDOUT_STREAM  shift, and go to state 9
    TOK_STDIN_STREAM   shift, and go to state 10

    $end               reduce using rule 1 (translation_unit)
    $end               [reduce using rule 9 (block)]
    TOK_CHAR_PR        [reduce using rule 9 (block)]
    TOK_STRING_PR      [reduce using rule 9 (block)]
    TOK_INTEGER_PR     [reduce using rule 9 (block)]
    TOK_FLOAT_PR       [reduce using rule 9 (block)]
    TOK_BOOL_PR        [reduce using rule 9 (block)]
    TOK_IF_KEY         [reduce using rule 9 (block)]
    TOK_LARROW_SBL     [reduce using rule 9 (block)]
    TOK_IDENTIFIER     [reduce using rule 9 (block)]
    TOK_STDOUT_STREAM  [reduce using rule 9 (block)]
    TOK_STDIN_STREAM   [reduce using rule 9 (block)]
    $default           reduce using rule 1 (translation_unit)

    statement   go to state 64
    block       go to state 13
    ifelse      go to state 14
    if          go to state 15
    macro       go to state 16
    assignment  go to state 17


State 37

   16 else: TOK_ELSE_KEY • block

    TOK_LARROW_SBL  shift, and go to state 7

    TOK_LARROW_SBL  [reduce using rule 9 (block)]
    $default        reduce using rule 9 (block)

    block  go to state 65


State 38

   14 ifelse: if else •

    $default  reduce using rule 14 (ifelse)


State 39

   32 assignment: TOK_CHAR_PR TOK_IDENTIFIER TOK_EQ_OP • exp TOK_DOT_SBL

    TOK_INTEGER_LIT  shift, and go to state 44
    TOK_FLOAT_LIT    shift, and go to state 45
    TOK_CHAR_LIT     shift, and go to state 46
    TOK_STRING_LIT   shift, and go to state 47
    TOK_BOOL_LIT     shift, and go to state 48
    TOK_LPAR_SBL     shift, and go to state 55
    TOK_IDENTIFIER   shift, and go to state 50

    exp   go to state 66
    term  go to state 53


State 40

   33 assignment: TOK_STRING_PR TOK_IDENTIFIER TOK_EQ_OP • exp TOK_DOT_SBL

    TOK_INTEGER_LIT  shift, and go to state 44
    TOK_FLOAT_LIT    shift, and go to state 45
    TOK_CHAR_LIT     shift, and go to state 46
    TOK_STRING_LIT   shift, and go to state 47
    TOK_BOOL_LIT     shift, and go to state 48
    TOK_LPAR_SBL     shift, and go to state 55
    TOK_IDENTIFIER   shift, and go to state 50

    exp   go to state 67
    term  go to state 53


State 41

   29 assignment: TOK_INTEGER_PR TOK_IDENTIFIER TOK_EQ_OP • exp TOK_DOT_SBL

    TOK_INTEGER_LIT  shift, and go to state 44
    TOK_FLOAT_LIT    shift, and go to state 45
    TOK_CHAR_LIT     shift, and go to state 46
    TOK_STRING_LIT   shift, and go to state 47
    TOK_BOOL_LIT     shift, and go to state 48
    TOK_LPAR_SBL     shift, and go to state 55
    TOK_IDENTIFIER   shift, and go to state 50

    exp   go to state 68
    term  go to state 53


State 42

   30 assignment: TOK_FLOAT_PR TOK_IDENTIFIER TOK_EQ_OP • exp TOK_DOT_SBL

    TOK_INTEGER_LIT  shift, and go to state 44
    TOK_FLOAT_LIT    shift, and go to state 45
    TOK_CHAR_LIT     shift, and go to state 46
    TOK_STRING_LIT   shift, and go to state 47
    TOK_BOOL_LIT     shift, and go to state 48
    TOK_LPAR_SBL     shift, and go to state 55
    TOK_IDENTIFIER   shift, and go to state 50

    exp   go to state 69
    term  go to state 53


State 43

   31 assignment: TOK_BOOL_PR TOK_IDENTIFIER TOK_EQ_OP • exp TOK_DOT_SBL

    TOK_INTEGER_LIT  shift, and go to state 44
    TOK_FLOAT_LIT    shift, and go to state 45
    TOK_CHAR_LIT     shift, and go to state 46
    TOK_STRING_LIT   shift, and go to state 47
    TOK_BOOL_LIT     shift, and go to state 48
    TOK_LPAR_SBL     shift, and go to state 55
    TOK_IDENTIFIER   shift, and go to state 50

    exp   go to state 70
    term  go to state 53


State 44

   48 term: TOK_INTEGER_LIT •

    $default  reduce using rule 48 (term)


State 45

   49 term: TOK_FLOAT_LIT •

    $default  reduce using rule 49 (term)


State 46

   51 term: TOK_CHAR_LIT •

    $default  reduce using rule 51 (term)


State 47

   50 term: TOK_STRING_LIT •

    $default  reduce using rule 50 (term)


State 48

   52 term: TOK_BOOL_LIT •

    $default  reduce using rule 52 (term)


State 49

   26 condition: TOK_LPAR_SBL • condition TOK_RPAR_SBL
   47 exp: TOK_LPAR_SBL • exp TOK_RPAR_SBL

    TOK_INTEGER_LIT  shift, and go to state 44
    TOK_FLOAT_LIT    shift, and go to state 45
    TOK_CHAR_LIT     shift, and go to state 46
    TOK_STRING_LIT   shift, and go to state 47
    TOK_BOOL_LIT     shift, and go to state 48
    TOK_LPAR_SBL     shift, and go to state 49
    TOK_IDENTIFIER   shift, and go to state 50

    condition  go to state 71
    exp        go to state 72
    term       go to state 53


State 50

   53 term: TOK_IDENTIFIER •

    $default  reduce using rule 53 (term)


State 51

   15 if: TOK_IF_KEY TOK_LPAR_SBL condition • TOK_RPAR_SBL block
   18 condition: condition • TOK_AND_OP exp
   19          | condition • TOK_OR_OP exp
   20          | condition • TOK_TEQ_OP exp
   21          | condition • TOK_NEQ_OP exp
   22          | condition • TOK_LEQ_OP exp
   23          | condition • TOK_GEQ_OP exp
   24          | condition • TOK_LESS_OP exp
   25          | condition • TOK_GRTR_OP exp

    TOK_OR_OP     shift, and go to state 73
    TOK_AND_OP    shift, and go to state 74
    TOK_TEQ_OP    shift, and go to state 75
    TOK_LEQ_OP    shift, and go to state 76
    TOK_GEQ_OP    shift, and go to state 77
    TOK_NEQ_OP    shift, and go to state 78
    TOK_LESS_OP   shift, and go to state 79
    TOK_GRTR_OP   shift, and go to state 80
    TOK_RPAR_SBL  shift, and go to state 81


State 52

   17 condition: exp •  [TOK_OR_OP, TOK_AND_OP, TOK_TEQ_OP, TOK_LEQ_OP, TOK_GEQ_OP, TOK_NEQ_OP, TOK_LESS_OP, TOK_GRTR_OP, TOK_RPAR_SBL]
   41 exp: exp • TOK_SUM_OP term
   42    | exp • TOK_MINUS_OP term
   43    | exp • TOK_MULT_OP term
   44    | exp • TOK_DIV_OP term
   45    | exp • TOK_MOD_OP term
   46    | exp • TOK_EXP_OP term

    TOK_SUM_OP    shift, and go to state 82
    TOK_MINUS_OP  shift, and go to state 83
    TOK_MULT_OP   shift, and go to state 84
    TOK_DIV_OP    shift, and go to state 85
    TOK_MOD_OP    shift, and go to state 86
    TOK_EXP_OP    shift, and go to state 87

    $default  reduce using rule 17 (condition)


State 53

   40 exp: term •

    $default  reduce using rule 40 (exp)


State 54

    8 statements: statements • statement
   12 block: TOK_LARROW_SBL $@1 statements • TOK_RARROW_SBL

    TOK_CHAR_PR        shift, and go to state 1
    TOK_STRING_PR      shift, and go to state 2
    TOK_INTEGER_PR     shift, and go to state 3
    TOK_FLOAT_PR       shift, and go to state 4
    TOK_BOOL_PR        shift, and go to state 5
    TOK_IF_KEY         shift, and go to state 6
    TOK_LARROW_SBL     shift, and go to state 7
    TOK_RARROW_SBL     shift, and go to state 88
    TOK_IDENTIFIER     shift, and go to state 8
    TOK_STDOUT_STREAM  shift, and go to state 9
    TOK_STDIN_STREAM   shift, and go to state 10

    TOK_CHAR_PR        [reduce using rule 9 (block)]
    TOK_STRING_PR      [reduce using rule 9 (block)]
    TOK_INTEGER_PR     [reduce using rule 9 (block)]
    TOK_FLOAT_PR       [reduce using rule 9 (block)]
    TOK_BOOL_PR        [reduce using rule 9 (block)]
    TOK_IF_KEY         [reduce using rule 9 (block)]
    TOK_LARROW_SBL     [reduce using rule 9 (block)]
    TOK_RARROW_SBL     [reduce using rule 9 (block)]
    TOK_IDENTIFIER     [reduce using rule 9 (block)]
    TOK_STDOUT_STREAM  [reduce using rule 9 (block)]
    TOK_STDIN_STREAM   [reduce using rule 9 (block)]

    statement   go to state 64
    block       go to state 13
    ifelse      go to state 14
    if          go to state 15
    macro       go to state 16
    assignment  go to state 17


State 55

   47 exp: TOK_LPAR_SBL • exp TOK_RPAR_SBL

    TOK_INTEGER_LIT  shift, and go to state 44
    TOK_FLOAT_LIT    shift, and go to state 45
    TOK_CHAR_LIT     shift, and go to state 46
    TOK_STRING_LIT   shift, and go to state 47
    TOK_BOOL_LIT     shift, and go to state 48
    TOK_LPAR_SBL     shift, and go to state 55
    TOK_IDENTIFIER   shift, and go to state 50

    exp   go to state 89
    term  go to state 53


State 56

   35 assignment: TOK_IDENTIFIER TOK_SUMEQ_OP exp • TOK_DOT_SBL
   41 exp: exp • TOK_SUM_OP term
   42    | exp • TOK_MINUS_OP term
   43    | exp • TOK_MULT_OP term
   44    | exp • TOK_DIV_OP term
   45    | exp • TOK_MOD_OP term
   46    | exp • TOK_EXP_OP term

    TOK_SUM_OP    shift, and go to state 82
    TOK_MINUS_OP  shift, and go to state 83
    TOK_MULT_OP   shift, and go to state 84
    TOK_DIV_OP    shift, and go to state 85
    TOK_MOD_OP    shift, and go to state 86
    TOK_EXP_OP    shift, and go to state 87
    TOK_DOT_SBL   shift, and go to state 90


State 57

   36 assignment: TOK_IDENTIFIER TOK_MINEQ_OP exp • TOK_DOT_SBL
   41 exp: exp • TOK_SUM_OP term
   42    | exp • TOK_MINUS_OP term
   43    | exp • TOK_MULT_OP term
   44    | exp • TOK_DIV_OP term
   45    | exp • TOK_MOD_OP term
   46    | exp • TOK_EXP_OP term
